--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="forgot_pass"><u>Forgot Password?</u></string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="continue_with">or continue with</string>
+    <string name="G_client_id">745648417763-ecomimqmfjr38so0eqtsghvvubfkknq9.apps.googleusercontent.com</string>
 </resources>
